tests/errors/from_json_wrong_type.dang
type Summary {
  pub children: [String!]!
}

let summary: Summary! = fromJSON("\"oops\"")
